<resources>
    <string name="app_name">CompactCalculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ultimatecalculator">UltimateCalculator</string>
    <string name="joshtiffany2_icloud_com">joshtiffany2@icloud.com</string>
    <string name="firstlayout">FirstLayout</string>
    <string name="secondlayout">SecondLayout</string>
    <string name="thirdlayout">ThirdLayout</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_scientific">ScientificActivity</string>
    <string name="standard">standard</string>
    <string name="Standard">Standard</string>
    <string name="scientific">Scientific</string>
    <string name="Scientific">Scientific</string>
    <string name="calculators">Calculators</string>
    <string name="Calculators">Calculators</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="title_activity_measure">MeasureActivity</string>
    <string-array name="measurements1">
        <item>Inches</item>
        <item>Feet</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>N-Mile</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Nanometer</item>
        <item>Micrometer</item>
        <item>Decimeter</item>
        <item>Decameter</item>
    </string-array>
    <string-array name="measurements2">
        <item>Inches</item>
        <item>Feet</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>N-Mile</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Nanometer</item>
        <item>Micrometer</item>
        <item>Decimeter</item>
        <item>Decameter</item>
    </string-array>
    <string-array name="time1">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>
    <string-array name="time2">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>
    <string-array name="speed1">
        <item>Kilo/Hour</item>
        <item>Meter/Sec</item>
        <item>Mile/Hour</item>
        <item>Feet/Sec</item>
    </string-array>
    <string-array name="speed2">
        <item>Kilo/Hour</item>
        <item>Meter/Sec</item>
        <item>Mile/Hour</item>
        <item>Feet/Sec</item>
    </string-array>
    <string-array name="volume1">
        <item>Cubic Inch</item>
        <item>Cubic Meter</item>
        <item>Milliliter</item>
        <item>Deciliter</item>
        <item>Liter</item>
        <item>Gallon</item>
    </string-array>
    <string-array name="volume2">
        <item>Cubic Inch</item>
        <item>Cubic Meter</item>
        <item>Milliliter</item>
        <item>Deciliter</item>
        <item>Liter</item>
        <item>Gallon</item>
    </string-array>
    <string-array name="force1">
        <item>Newton</item>
        <item>Kilogram</item>
        <item>Dyne</item>
        <item>Pound</item>
    </string-array>
    <string-array name="force2">
        <item>Newton</item>
        <item>Kilogram</item>
        <item>Dyne</item>
        <item>Pound</item>
    </string-array>
    <string-array name="weight1">
        <item>Milligram</item>
        <item>Centigram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>MetricTon</item>
        <item>Ounce</item>
        <item>Pound</item>
    </string-array>
    <string-array name="weight2">
        <item>Milligram</item>
        <item>Centigram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>MetricTon</item>
        <item>Ounce</item>
        <item>Pound</item>
    </string-array>
    <string-array name="power1">
        <item>Megawatt</item>
        <item>Kilowatt</item>
        <item>Watt</item>
        <item>Milliwatt</item>
        <item>Horse Power</item>
    </string-array>
    <string-array name="power2">
        <item>Megawatt</item>
        <item>Kilowatt</item>
        <item>Watt</item>
        <item>Milliwatt</item>
        <item>Horse Power</item>
    </string-array>
    <string-array name="pressure1">
        <item>Megapascal</item>
        <item>Kilopascal</item>
        <item>Pascal</item>
        <item>Bar</item>
        <item>Atmosphere</item>
        <item>Millimeter of Mercury</item>
        <item>Inch of Mercury</item>
    </string-array>
    <string-array name="pressure2">
        <item>Megapascal</item>
        <item>Kilopascal</item>
        <item>Pascal</item>
        <item>Bar</item>
        <item>Atmosphere</item>
        <item>Millimeter of Mercury</item>
        <item>Inch of Mercury</item>
    </string-array>
    <string-array name="energy1">
        <item>Megajoule</item>
        <item>Kilojoule</item>
        <item>Joule</item>
        <item>Erg</item>
        <item>Electronvolt</item>
    </string-array>
    <string-array name="energy2">
        <item>Megajoule</item>
        <item>Kilojoule</item>
        <item>Joule</item>
        <item>Erg</item>
        <item>Electronvolt</item>
    </string-array>
    <string-array name="angle1">
        <item>Radian</item>
        <item>Degree</item>
        <item>Minute</item>
        <item>Second</item>
    </string-array>
    <string-array name="angle2">
        <item>Radian</item>
        <item>Degree</item>
        <item>Minute</item>
        <item>Second</item>
    </string-array>
    <string-array name="digStorage1">
        <item>Byte</item>
        <item>Kilobyte</item>
        <item>Megabyte</item>
        <item>Gigabyte</item>
        <item>Terabyte</item>
        <item>Petabyte</item>
        <item>Kibibyte</item>
        <item>Mebibyte</item>
        <item>Gibibyte</item>
        <item>Tebibyte</item>
        <item>Pebibyte</item>
        <item>Bit</item>
        <item>Kilobit</item>
        <item>Megabit</item>
        <item>Gigabit</item>
        <item>Terabit</item>
        <item>Petabit</item>
        <item>Kibibit</item>
        <item>Mebibit</item>
        <item>Gibibit</item>
        <item>Tebibit</item>
        <item>Pebibit</item>
    </string-array>
    <string-array name="digStorage2">
        <item>Byte</item>
        <item>Kilobyte</item>
        <item>Megabyte</item>
        <item>Gigabyte</item>
        <item>Terabyte</item>
        <item>Petabyte</item>
        <item>Kibibyte</item>
        <item>Mebibyte</item>
        <item>Gibibyte</item>
        <item>Tebibyte</item>
        <item>Pebibyte</item>
        <item>Bit</item>
        <item>Kilobit</item>
        <item>Megabit</item>
        <item>Gigabit</item>
        <item>Terabit</item>
        <item>Petabit</item>
        <item>Kibibit</item>
        <item>Mebibit</item>
        <item>Gibibit</item>
        <item>Tebibit</item>
        <item>Pebibit</item>
    </string-array>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_speed">SpeedActivity</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="conversions">Conversions</string>
    <string name="temperature">Temperature</string>
    <string name="length">Length</string>
    <string name="time">time</string>
    <string name="speed">Speed</string>
    <string name="Time">Time</string>
    <string name="Temperature">Temperature</string>
    <string name="volume">Volume</string>
    <string name="Volume">Volume</string>
    <string name="compactcalculator">CompactCalculator</string>
    <string name="Compactcalculator">Compactcalculator</string>
    <string name="title_activity_force">ForceActivity</string>
    <string name="Conversions">Conversions</string>
    <string name="Force">Force</string>
    <string name="title_activity_weight_activty">WeightActivty</string>
    <string name="Weight">Weight</string>
    <string name="title_activity_power">PowerActivity</string>
    <string name="Power">Power</string>
    <string name="title_activity_pressure">Pressure</string>
    <string name="title_activity_energy">EnergyActivity</string>
    <string name="Energy">Energy</string>
    <string name="title_activity_angle">AngleActivity</string>
    <string name="Angle">Angle</string>
    <string name="title_activity_dig_storage">DigStorageActivity</string>
    <string name="Digital_storage">Digital Storage</string>
    <string name="title_activity_area">AreaActivity</string>
    <string name="Area">Area</string>
    <string name="Geometry">Geometry</string>
    <string name="title_activity_area_triangle">AreaTriangleActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_area_square">AreaSquareActivity</string>
    <string name="title_activity_area_rectangle">AreaRectangleActivity</string>
    <string name="title_activity_area_parallelogram">AreaParallelogramActivity</string>
    <string name="title_activity_trapezoid">Trapezoid</string>
    <string name="title_activity_rhombus">RhombusActivity</string>
    <string name="title_activity_pentagon">PentagonActivity</string>
    <string name="title_activity_area_hexagon">AreaHexagonActivity</string>
    <string name="title_activity_area_circle">AreaCircleActivity</string>
    <string name="title_activity_area_circle_arc_activty">AreaCircleArcActivty</string>
    <string name="title_activity_area_ellipse">AreaEllipseActivity</string>
    <string name="title_activity_cube_volume">CubeVolumeActivity</string>
    <string name="title_activity_rectang_prism_volume">RectangPrismVolumeActivity</string>
    <string name="title_activity_square_pyr_frustum">SquarePyrFrustumActivity</string>
    <string name="title_activity_square_pyr">SquarePyrActivity</string>
    <string name="title_activity_cylinder_volume">CylinderVolumeActivity</string>
    <string name="title_activity_cone_volume">ConeVolumeActivity</string>
    <string name="title_activity_conical_frustum">ConicalFrustumActivity</string>
    <string name="title_activity_sphere_volume">SphereVolumeActivity</string>
    <string name="title_activity_spherical_cap_volume">SphericalCapVolumeActivity</string>
    <string name="title_activity_spherical_seg">SphericalSegActivity</string>
    <string name="title_activity_ellipsoid_volume">EllipsoidVolumeActivity</string>
    <string name="input_values">Input Values</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_credits">CreditsActivity</string>
</resources>