<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/Calculators">
            <item
                android:id="@+id/nav_home"
                android:title="@string/Standard" />
            <item
                android:id="@+id/nav_gallery"
                android:title="@string/Scientific" />
        </item>

    </group>

    <item android:title="@string/Conversions">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/Temperature" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/length" />
            <item
                android:id="@+id/nav_time"
                android:title="@string/Time" />
            <item
                android:id="@+id/nav_speed"
                android:title="@string/speed" />
            <item
                android:id="@+id/nav_volume"
                android:title="@string/Volume" />
            <item
                android:id="@+id/nav_force"
                android:title="@string/Force" />
            <item
                android:id="@+id/nav_weight"
                android:title="@string/Weight" />
            <item
                android:id="@+id/nav_power"
                android:title="@string/Power" />
            <item
                android:id="@+id/nav_pressure"
                android:title="Pressure" />
            <item
                android:id="@+id/nav_energy"
                android:title="@string/Energy" />
            <item
                android:id="@+id/nav_angle"
                android:title="@string/Angle" />

        </menu>
    </item>

    <item android:title="@string/Geometry">
        <menu>
            <item
                android:id="@+id/nav_area"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Area" />
            <item
                android:id="@+id/nav_geovolume"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Volume" />
        </menu>
    </item>

</menu>
