<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/Calculators">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="Standard" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Scientific" />
        </item>
    </group>

    <item android:title="Conversions">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Temperature" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Length" />
            <item
                android:id="@+id/nav_time"
                android:title="Time" />
            <item
                android:id="@+id/speed"
                android:icon="@drawable/ic_menu_send"
                android:title="Speed" />
            <item
                android:id="@+id/volume"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Volume" />
            <item
                android:id="@+id/nav_force"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Force" />
            <item
                android:id="@+id/nav_weight"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Weight" />
            <item
                android:id="@+id/nav_power"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Power" />
            <item
                android:id="@+id/nav_pressure"
                android:icon="@drawable/ic_menu_send"
                android:title="Pressure" />
            <item
                android:id="@+id/nav_energy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Energy" />
        </menu>
    </item>

</menu>
