<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/Calculators">
            <menu>
                <item
                    android:id="@+id/nav_first_layout"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/Standard" />
                <item
                    android:id="@+id/nav_second_layout"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/Scientific" />
            </menu>
        </item>
    </group>

    <item android:title="Conversions">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Temperature" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Measurements" />
        </menu>
    </item>

</menu>
